feat(css): comment base layer

--- a/src/index.css
+++ b/src/index.css
@@ -355,11 +355,11 @@
     --sidebar-ring: 340 80% 65%;
   }
 }
-@layer base {
+/* @layer base {
   * {
     @apply border-border;
   }
   body {
     @apply bg-background text-foreground;
   }
-}
+} */
